<resources>
    <string name="app_name">GUET课程表</string>
    <string name="monday_title">星期一</string>
    <string name="tuesday_title">星期二</string>
    <string name="wednesday_title">星期三</string>
    <string name="thursday_title">星期四</string>
    <string name="friday_title">星期五</string>
    <string name="saturday_title">星期六</string>
    <string name="sunday_title">星期日</string>
    <string name="time1_title">1,2</string>
    <string name="time2_title">3,4</string>
    <string name="time3_title">5,6</string>
    <string name="time4_title">7,8</string>
    <string name="time5_title">晚</string>

    <string name="sid_tip">学号</string>
    <string name="passwd_tip">学分制系统密码</string>
    <string name="vpn_passwd_tip">WebVPN密码</string>
    <string name="checkcode_tip">学分制系统验证码</string>

    <string name="sid_fill">1234567890</string>
    <string name="passwd_fill">password</string>
    <string name="checkcode_fill">1234</string>
    <string name="login_head_text">学分制教学管理系统</string>

    <string name="login_btn">登录</string>
    <string name="forget_btn">删除</string>
    <string name="picker_ok_btn">确定</string>
    <string name="picker_cancel_btn">取消</string>


    <string name="lan_login_url">http://bkjw.guet.edu.cn/Login/SubmitLogin</string>
    <string name="lan_login_referer">http://bkjw.guet.edu.cn/</string>
    <string name="lan_login_success_contain_response_text">\"success\":true</string>

    <string name="lan_outside_login_url">http://172.16.1.99/student/public/login.asp</string>
    <string name="lan_outside_login_referer">http://172.16.1.99/student/public/login.asp</string>

    <string name="lan_snackbar_login_fail">登录失败, 检查校园网连接后重试</string>
    <string name="lan_snackbar_login_fail_ck">验证码错误，登录失败</string>
    <string name="lan_snackbar_login_fail_pwd">密码错误，登录失败</string>

    <string name="lan_snackbar_vpn_test_login_fail_ip">WebVPN登录验证失败次数过多，请稍后重试</string>
    <string name="lan_snackbar_vpn_test_login_fail">WebVPN登录验证失败</string>
    <string name="lan_snackbar_outside_test_login_fail">教务网站登录验证失败</string>

    <string name="lan_snackbar_data_updating">登录成功，正在同步数据...请勿离开</string>

    <string name="lan_toast_update_success">数据同步成功！</string>
    <string name="lan_toast_update_fail">数据同步失败！请重试</string>

    <string name="lan_title_login_updating">同步 | 同步中...</string>
    <string name="lan_title_login_updated">同步 | 同步成功</string>
    <string name="lan_title_login_updated_fail">同步 | 请重试</string>

    <string name="lan_extra_password_title">还差一步  😋</string>

    <string name="lan_get_checkcode_url">http://bkjw.guet.edu.cn/login/GetValidateCode?id=0.7117051736083029</string>
    <string name="lan_get_checkcode_referer">http://bkjw.guet.edu.cn/</string>
    <string name="lan_get_person_url">http://bkjw.guet.edu.cn/Student/GetPerson</string>
    <string name="lan_get_person_referer">http://bkjw.guet.edu.cn</string>
    <string name="lan_get_person_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_terms_url">http://bkjw.guet.edu.cn/Comm/GetTerm</string>
    <string name="lan_get_terms_referer">http://bkjw.guet.edu.cn</string>
    <string name="lan_get_terms_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_table_url">http://bkjw.guet.edu.cn/student/getstutable</string>
    <string name="lan_get_table_referer">http://bkjw.guet.edu.cn</string>
    <string name="lan_get_table_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_hours_url">http://bkjw.guet.edu.cn/comm/gethours</string>
    <string name="lan_get_hours_referer">http://bkjw.guet.edu.cn</string>
    <string name="lan_get_hours_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_student_url">http://bkjw.guet.edu.cn/student/StuInfo</string>
    <string name="lan_get_student_referer">http://bkjw.guet.edu.cn</string>
    <string name="lan_get_student_success_contain_response_text">\"name\"</string>
    <string name="lan_get_graduation_score_url">http://bkjw.guet.edu.cn/student/Getyxxf</string>
    <string name="lan_get_graduation_score_referer">http://bkjw.guet.edu.cn</string>
    <string name="lan_get_graduation_score_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_grades_url">http://bkjw.guet.edu.cn/Student/GetStuScore</string>
    <string name="lan_get_grades_referer">http://bkjw.guet.edu.cn/Login/MainDesktop</string>
    <string name="lan_get_grades_success_contain_response_text">\"success\":true</string>


    <string name="wan_get_check_code_url">https://v.guet.edu.cn/http/77726476706e69737468656265737421f2fc4b8b69377d556a468ca88d1b203b/login/GetValidateCode?id=0.5018148359674977</string>
    <string name="wan_get_check_code_referer">https://v.guet.edu.cn/http/77726476706e69737468656265737421f2fc4b8b69377d556a468ca88d1b203b/</string>
    <string name="wan_vpn_get_ticket_url">https://v.guet.edu.cn/</string>
    <string name="wan_vpn_get_ticket_referer">https://v.guet.edu.cn/</string>
    <string name="wan_vpn_login_url">https://v.guet.edu.cn/do-login</string>
    <string name="wan_vpn_login_referer">https://v.guet.edu.cn/login</string>
    <string name="wan_vpn_login_success_contain_response_text">\"success\": true</string>
    <string name="wan_vpn_login_need_confirm_contain_response_text">\"error\": \"NEED_CONFIRM\"</string>
    <string name="wan_vpn_confirm_login_url">https://v.guet.edu.cn/do-confirm-login</string>
    <string name="wan_vpn_confirm_login_referer">https://v.guet.edu.cn/login</string>
    <string name="wan_vpn_login_ip_forbidden_contain_response_text">\"error\": \"IP_FORBIDDEN\"</string>

    <string name="wan_vpn_ip_forbidden">ip</string>


    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Safari/537.36</string>


    <string name="snackbar_login_fail_vpn">登录失败, 检查网络连接后重试</string>

    <string name="cookie_delimiter">"; "</string>
    <string name="ok_btn_text_zhcn">确定</string>
    <string name="deny_btn_zhcn">取消</string>
    <string name="login_fail_ck_title">登录失败 - 验证码错误</string>
    <string name="login_fail_pwd_title">登录失败 - 密码不正确</string>
    <string name="login_fail_other_title">登录失败</string>
    <string name="login_success_title">登录成功</string>
    <string name="login_fail_ck_text">验证码不正确</string>
    <string name="login_fail_pwd_text">用户或密码错误!</string>

    <string name="title">课程表</string>
    <string name="title_login">同步</string>
    <string name="Hour_save">保存</string>
    <string name="Hour_restore">重置</string>
    <string name="Hour_List">时间表</string>

    <string name="server_terminfo_datetime_format">yyyy/M/d H:mm:ss</string>
    <string name="ts_datetime_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="server_hours_time_format">H:mm</string>

    <string name="preference_file_name">com.telephone.coursetable.preference</string>
    <string name="preference_file_name_test">com.telephone.coursetable.preference.test</string>

    <string name="pref_hour_start_suffix">S</string>
    <string name="pref_hour_end_suffix">E</string>
    <string name="pref_hour_des_suffix">D</string>
    <string name="pref_hour_start_backup_suffix">SB</string>
    <string name="pref_hour_end_backup_suffix">EB</string>
    <string name="pref_hour_des_backup_suffix">DB</string>

    <string name="no_user_title_suffix">" | 未登录"</string>
    <string name="updating_user_title_suffix">" | 同步中..."</string>
    <string name="ok_user_title_suffix">同步</string>
    <string name="ok_user_title_prefix">"  "</string>
    <string name="term_vacation">寒假/暑假</string>
    <string name="pref_current_term_key">current_term</string>
    <string name="pref_current_week_key">current_week</string>
    <string name="pref_user_updating_key">updating</string>
    <string name="pref_service_updating_key">service_updating</string>
    <string name="pref_logging_in_key">logging</string>

    <string name="causes">\t\t\t\t\t在桂电生活和学习的两年间，我们发现，桂电生活虽然多姿多彩，但是我们要想获取什么信息却很繁琐，比如成绩查询，比如考试信息，再比如上课安排等等。\n\t\t\t\t\t有没有什么手段让我们可以快速的获取信息呢？基于这样的想法，本款软件应运而生。\n</string>
    <string name="goal">\t\t\t\t\t目的就是为了让学生们轻松获得自己想要的信息，不管是考试成绩，还是上课安排，只需小手轻轻一点，大量的信息都会汇总并显示出来。\n</string>
    <string name="future">\t\t\t\t\t目前“GUET课程表”还处于测试阶段，有许多地方存在缺陷，我们将持续推出新版本，不断地完善APP的功能，满足不同用户的需求。\n
        \t\t\t\t\t\t\t\t\t\t未来预期功能：\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t支持WebVPN登陆\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t已选课程查询\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t学分绩查询\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t毕业学位评估\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t毕业所需学分查询\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t消息提醒\n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t实验成绩查询\n</string>
    <string name="member">\t\t\t\t\t组长：谭凌风\n\t\t\t\t\t组员：潘鹏宇 &amp; 石俊杰 &amp; 唐远军\n</string>
    <string name="more">\t\t\t\t\t本app研发灵感来自于“桂电课程表”，对此表示感谢！\n\t\t\t\t\t本app由小组内人员共同研发完成，与学校官方无关。\n\t\t\t\t\t因为app还在不断的试错与完善中，但凡有运行出错的小伙伴们记得联系我们，我们会尽快解决错误，联系方式请点击右上方的按钮。</string>
</resources>
